--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: '>=0.5.7+3 <2.0.0'
   smooth_page_indicator: ^0.1.5
   encrypt: ^4.0.2
+  flutter_secure_storage: ^3.3.3
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
