--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^0.1.5
   encrypt: ^4.0.2
   flutter_secure_storage: ^3.3.3
+  connectivity: '>=0.4.8+6 <2.0.0'
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
