--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   encrypt: ^4.0.2
   flutter_secure_storage: ^3.3.3
   connectivity: '>=0.4.8+6 <2.0.0'
+  package_info: ^0.4.1
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
@@ -59,7 +60,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  assets:
+    - images/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
