--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,13 @@ dependencies:
   flutter_secure_storage: ^3.3.3
   connectivity: '>=0.4.8+6 <2.0.0'
   package_info: ^0.4.1
+  device_info: ^0.4.2+4
 
   firebase_core: ^0.4.0+9
   firebase_analytics: ^5.0.2
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
   url_launcher: ^5.4.10
-
 
   flutter_html_to_pdf:
     git:
